Bug 321053 - widgets painting artifact
Summary: widgets painting artifact
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-12 07:46 UTC by Ralf Habacker
Modified: 2013-06-26 10:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.80
Sentry Crash Report:


Attachments
testcase showing the painting artifact (7.97 KB, application/x-uml)
2013-06-12 07:46 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2013-06-12 07:46:12 UTC
Moving activity widgets with a dedicate line width (for example 7) results into painting artifacts. 

Reproducible: Always

Steps to Reproduce:
1. open the appended test case 
2. move the activity widget

Actual Results:  
painting artifacts are visible

Expected Results:  
there should be no painting artifacts.
Comment 1 Ralf Habacker 2013-06-12 07:46:44 UTC
Created attachment 80467 [details]
testcase showing the painting artifact
Comment 2 Ralf Habacker 2013-06-12 10:46:51 UTC
This bug affects all UMLWidget based widget painting because the implementation of UMLWidget::boundingRect() do not include the half with of the pen width used to paint the outline.
Comment 3 Ralf Habacker 2013-06-12 10:52:47 UTC
Git commit 93b8e69455004e95ed046bae3331e7eb33439697 by Ralf Habacker.
Committed on 12/06/2013 at 12:52.
Pushed by habacker into branch '321053-widgets-painting-artifact'.

Fixed widget painting artifact when widget line with is greater 1.

M  +2    -1    umbrello/widgets/widgetbase.cpp

http://commits.kde.org/umbrello/93b8e69455004e95ed046bae3331e7eb33439697
Comment 4 Ralf Habacker 2013-06-12 10:55:34 UTC
Git commit 15b68a455d65ae224f9537104ddccf7f75053763 by Ralf Habacker.
Committed on 12/06/2013 at 12:55.
Pushed by habacker into branch 'master'.

Fixed widget painting artifact when widget line with > 1.

M  +1    -0    ChangeLog
M  +2    -1    umbrello/widgets/widgetbase.cpp

http://commits.kde.org/umbrello/15b68a455d65ae224f9537104ddccf7f75053763
Comment 5 Ralf Habacker 2013-06-12 10:57:16 UTC
Git commit 9a5ab51fe68c01c535a76638cbc04e9cd448e0c2 by Ralf Habacker.
Committed on 12/06/2013 at 12:55.
Pushed by habacker into branch '320463-get-rid-of-old-paint-api'.

Fixed widget painting artifact when widget line with > 1.

M  +1    -0    ChangeLog
M  +2    -1    umbrello/widgets/widgetbase.cpp

http://commits.kde.org/umbrello/9a5ab51fe68c01c535a76638cbc04e9cd448e0c2
Comment 6 Ralf Habacker 2013-06-25 18:54:50 UTC
Git commit 55462a5c6ea588ca5e38cd7a03cca1142a2fa53f by Ralf Habacker.
Committed on 12/06/2013 at 10:55.
Pushed by habacker into branch 'KDE/4.10'.

Fixed widget painting artifact when widget line with > 1.

Conflicts:
	ChangeLog

M  +17   -11   ChangeLog
M  +2    -1    umbrello/widgets/widgetbase.cpp

http://commits.kde.org/umbrello/55462a5c6ea588ca5e38cd7a03cca1142a2fa53f