Fixed widget painting artifact when widget line with > 1.

BUG:321053

Conflicts:
	ChangeLog